# robo-sim

./: MUJOCO_TIPS.md  README.md
exp-control/: exp-control.py
exp-cpp/: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  build.bat
exp-cpp/models/urdf/meshes/visual/: link1.stl  link2.stl  link4.stl  link7.stl
exp-cpp/models/urdf/robot/: panda_arm_config_mjcf.xml  panda_arm_mjcf.xml
exp-cpp/mujoco200/sample/__MACOSX/: ._2D_Diff_Drive_Car
exp-cpp/mujoco200/sample/control_pendulum/: main.c
exp-cpp/mujoco200/sample/dbpendulum/: data.csv  main.c
exp-cpp/mujoco200/sample/moving_pendulum/: MUJOCO_LOG.TXT  run_unix
exp-cpp/mujoco200/sample/moving_pendulum_cpp/: CMakeLists.txt  main.cpp  mainMujoco.c  mainMujoco.h
exp-cpp/mujoco200/sample/projectile/: makefile
exp-cpp/samples/: constraint_path_planner.cpp  constraint_path_planner.hpp  mj_sim.hpp  path_plan.cpp  path_planner.cpp  path_planner.hpp  simple_sim.cpp
exp-cpp/scripts/: build_clang_msbuild.bat  download_mujoco.ps1  install_ompl.ps1
exp-mujoco/: mujoco
exp-mujoco/mujoco200/sample/__MACOSX/2D_Diff_Drive_Car/: ._diff_drive.py  ._differentialdrive.xml
exp-mujoco/mujoco200/sample/control_pendulum/: makefile  pendulum.xml
exp-mujoco/mujoco200/sample/dbpendulum/: data.csv  makefile
exp-mujoco/mujoco200/sample/moving_pendulm/: data.csv
exp-mujoco/mujoco200/sample/moving_pendulum/: data.csv  main.c  makefile  movingPendulum.xml
exp-mujoco/mujoco200/sample/moving_pendulum_cpp/: CMakeList.txt
exp-mujoco/mujoco200/sample/projectile/: main.c
exp-py/: exp-mujoco.py
exp-py/panda-arm/: common.py  controlMethodComparison.ipynb  dataLogger.py  debugger.py  lowLevelController.py  motion.py  motionController.py  motionControllerService.py  motionRequest.py  panda_arm.py  rough_design.drawio  rtbWrapper.py  sandbox.ipynb  simState.py  taskManager.py  taskManagerService.py  taskRequest.py
exp-py/panda-arm/common/: common.py  common_constants.py  pose6d.py  time_recorder.py
exp-py/panda-arm/config/: panda_config.toml
exp-py/panda-arm/debugger/: dataLogger.py  debugger.py
exp-py/panda-arm/lowlevelcon/: lowLevelController.py
exp-py/panda-arm/motioncon/: motion.py  motionController.py  motionControllerService.py  motionRequest.py
exp-py/panda-arm/planner/: trajectoryProfiler.py
exp-py/panda-arm/robotcon/: robotController.py  robotControllerRequest.py  robotControllerService.py
exp-py/panda-arm/task/: taskManager.py  taskManagerService.py  taskRequest.py
exp-py/panda-arm/urdf/meshes/visual/: finger.stl  hand.stl  link0.stl  link3.stl  link5.stl  link6.stl
exp-py/panda-arm/urdf/robot/: panda_arm.urdf  panda_arm_config_mjcf.xml  panda_arm_mjcf.xml
